Jann 30/objects/GS1_Currency__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Dsp__c</fullName>
        <formula>IF(ISNUMBER(Code__c),VALUE(Code__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GS1 Currency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_Currencies</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active Currencies</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_Currencies</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 - Inactive Currencies</label>
    </listViews>
    <nameField>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS1 Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>